2019-04-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/peeph.def:
	  Improve workaround for missing addc/subc a, k; improve shifts by 7, 15, etc; fix handling of non-dead a in wide right shifty by literal.

2019-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix note on endianness.

2019-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix bug #2904.
	* src/z80/gen.c:
	  Implement RFE #623.

2019-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/inst.cc:
	  Fix addc m, a, patch by Nicolas Lesser,
	  fix subs m, a.
	* src/pdk/gen.c:
	  +=, -= optimization; fix wide == between stack and register operand.

2019-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/pdk.cc:
	  Fix register dump, patch by Nicolas Lesser.

2019-04-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Various fixes and improvements.
	* src/SDCCpeeph.c,
	  src/pdk/peeph.def:
	  Remove untargeted labels.
	* support/regression/tests/*.c:
	  Disable tests that won't work anytime soon on pkd15.
	* sim/ucsim/globals.cc:
	  More verbose pdk subtype output.

2019-04-16 Philipp Klaus Krause <pkk AT spth.de>

	* Merged pdk branch to trunk.

2019-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkrloc3.c:
	  pdk13 linker fix, patch By Nicolas Lesser.

2019-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* Merged post-3.9 branch to trunk.

2019-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix POINTER_SET with left operand on stack, right operand in pseudo-register.

2019-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-460010.c,
	  support/regression/tests/bug1928022.c,
	  support/regression/tests/gcc-torture-execute-991216-2.c,
	  support/regression/tests/gcc-torture-execute-va-arg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-15.c: